# tskmstr

./: Cargo.toml  Contributing.md  LICENSE.md  README.md  rust-toolchain.toml
.github/workflows/: build.yml  release.yml
assets/jira/: response.json
doc/: about.md  features_roadmap.md  src_layout.md
doc/configuration/: jira.md
sample/: tskmstr.config.yml
src/: config.rs  control.rs  main.rs  output.rs
src/providers/: mod.rs
src/providers/common/: credentials.rs  mod.rs  model.rs
src/providers/github/: methods.rs  mod.rs  model.rs
src/providers/gitlab/: auth.rs  methods.rs  mod.rs  model.rs
src/providers/google_tasks/: methods.rs  model.rs
src/providers/jira/: methods.rs  mod.rs  model.rs
src/providers/o365/: auth.rs  methods.rs  mod.rs  model.rs
