[package]
name = "tskmstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version  = "0.11",  features = [ "json"] }
serde = { version = "1.0" , features = [ "derive"] }
serde_json = { version  = "1.0" }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
structopt = "0.3"
shellexpand = "3.1.0"
expanduser = "1.2.2"
