[package]
name = "tskmstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version  = "0.11",  features = [ "json"] }
serde = { version = "1.0" , features = [ "derive"] }
serde_json = { version  = "1.0" }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
structopt = "0.3"
shellexpand = "3.1.0"
expanduser = "1.2.2"
tui = "0.19"
anyhow = "1.0.75"
log = "0.4.20"
simple_logger = "4.2.0"
regex = "1.9.4"
lazy_static = "1.4.0"
either = "1.9.0"
