[package]
name = "tskmstr"
version = "0.5.1"
edition = "2021"

[toolchain]
# we are using nicer Fn features
#![feature(fn_traits)] Fn
#![feature(unboxed_closures)] (no Box<Fn....>
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip="debuginfo"

[dependencies]
reqwest = { version  = "0.11",  features = [ "json"] }
serde = { version = "1.0" , features = [ "derive"] }
serde_json = { version  = "1.0" }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
clap = { version = "4.4.6", features = [ "derive"] }
shellexpand = "3.1.0"
anyhow = "1.0.75"
log = "0.4.20"
simple_logger = "4.2.0"
regex = "1.9.4"
lazy_static = "1.4.0"
either = "1.9.0"
colored = "2.0.4"
keyring = "2.0.5"
directories = "5.0.1"
serde-inline-default = "0.1.1"
base64 = "0.21.4"
